Cria estrutura inicial do backend com API REST para gerenciamento do portfólio e suporte a uploads

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -29,6 +29,11 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+/uploads/
+
+
+/src/main/java/com/gustavo/portfolio/backend/config/
+
 src/main/resources/application.properties
 
 ### VS Code ###
